# lan-party-manager-docker

./: .gitignore  Cargo.toml  Dockerfile-lpmng-core  Dockerfile-lpmng-router  Dockerfile-test  README  README.md  build.sbt  core.sh  docker-compose.yml  router.sh  test.sh
.bsp/: sbt.json
lpmng-core/: Cargo.toml  run.sh  sqlx-data.json
lpmng-core/migrations/: 20221015182541_users.sql  20221015183201_sessions.sql  20221019164002_session_date.sql  20221019171534_sessions.sql  init.sql
lpmng-core/src/: api.rs  auth.rs  console.rs  db.rs  main.rs  models.rs
lpmng-core/src/public/: index.html
lpmng-front/: README.md  nuxt.config.js  package.json
lpmng-front/assets/: variables.scss
lpmng-front/layouts/: default.vue  kiosk.vue
lpmng-front/middleware/: admin.js  auth.js  bypass.js  notconnected.js
lpmng-front/pages/: admin.vue  check.vue  index.vue  login.vue  no-internet.vue  register.vue
lpmng-front/pages/admin/: index.vue  sessions.vue  users.vue
lpmng-front/store/: api.js
lpmng-mq/: Cargo.toml  build.rs
lpmng-mq/src/: client.rs  server.rs
lpmng-mq/src/protos/: agent.proto
lpmng-router/: Cargo.toml  run.sh
lpmng-router/src/: main.rs
