[package]
name = "lpmng-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "offline"]}
