[package]
name = "lpmng-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "offline", "uuid"]}
serde = "1.0.145"
sha256 = "1.1.1"
biscuit-auth = "2.2.0"
base64-url = "1.4.13"
serde_json = "1.0.86"
chrono = {version = "0.4.22", features = ["serde"]}
lpmng-mq = {path = "../lpmng-mq"}
dialoguer = {version = "0.10.4", features = ["history", "completion"]}
futures = "0.3.28"
